fixed filter position and non visiblity of products

--- a/css/newGlobal.css
+++ b/css/newGlobal.css
@@ -315,6 +315,11 @@ md-backdrop ~ md-content {
     min-height:52px;
 }
 
+.introPageStyle{
+    height: 100% !important;
+    min-height:100% !important;
+}
+
 
 .countryDropdownButton {
     height: 60px;
